kubernetes/apps/mediaserver/tautulli/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
spec:
  parentRefs:
    - name: istio-ingressgateway
      namespace: istio-ingress
  hostnames:
    - sonarr.milton.mcf.io
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sonarr
          port: 8181
