kubernetes/apps/mediaserver/tautulli/virtual-service.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.mcf.io/networking.istio.io/virtualservice_v1alpha3.json
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tautulli
spec:
  hosts:
    - tautulli.milton.mcf.io
  gateways:
    - istio-ingress/istio-ingressgateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 8181
            host: tautulli.mediaserver.svc.cluster.local
